...
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.235" />

    <ImageButton
        android:id="@+id/edit_button"
        android:layout_width="34dp"
        android:layout_height="35dp"
        android:backgroundTint="#00FFFFFF"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
